sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:4: error: recursive variable ecart needs type
  var ecart = (ecart.toDouble / 1.3).toInt
               ^AlgCombSort:14: error: not found: value i
    i=0
    ^AlgCombSort:16: error: not found: value i
    while (i+ecart<lgr)
           ^AlgCombSort:18: error: not found: value i
      if (plusPetit(i+1,i))
                    ^AlgCombSort:18: error: not found: value i
      if (plusPetit(i+1,i))
                        ^AlgCombSort:20: error: not found: value i
        echange(i+1,i)
                ^AlgCombSort:20: error: not found: value i
        echange(i+1,i)
                    ^AlgCombSort:23: error: not found: value i
      i+=1
      ^