sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var lgr = getNombreValeurs()
  var ecart = (ecart.toDouble / 1.3).toInt
  var cpt = 0 
  do
  {
    cpt=0
    if (ecart>1)
    {
      ecart = ecart/1.3
    }
    
    i=0
    
    while (i+ecart<lgr)
    {
      if (plusPetit(i+1,i))
      {
        echange(i+1,i)
        cpt+=1
      }
      i+=1
      
    }
  }
  while(ecart>1 || cpt!=0)
}